--- a/moviemanager_backend/src/main/resources/application.properties
+++ b/moviemanager_backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+#
+# JDBC properties
+#
 
+spring.datasource.url=jdbc:mysql://localhost:3306/movie_manager
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+
+spring.main.banner-mode=off
+#logging.level.root = warn
+#
+#logging.level.org.hibernate.SQL = trace
+#logging.level.org.hibernate.orm.jdbc.bind = trace
