--- a/moviemanager_backend/src/main/resources/application.properties
+++ b/moviemanager_backend/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/movie_manager
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
+#spring.jpa.show-sql=true
 
 spring.main.banner-mode=off
 #logging.level.root = warn
